      - Print values of list options in parseable form.
  * Cupt:
    - Config:
      - Recognize 'apt::periodic::*' variables.
      - Recognize 'unattended-upgrade::*' variables.
      - Recognize 'apt::archives::*' variables.
      - Three above accidentally (Closes: #547951).
      - Report unknown option names in original case. Thanks to Robert Millan.
        (Closes: #548314)
    - Cache:
      - Strip last '/' character from base URI if present. Thanks to Patrick
        Schoenfeld. (Closes: #547953)
      - Parsing preferences: allow spaces between release expressions.
        Thanks to Julian Andres Klode. (Closes: #548051)
      - Speeded up 'Provides' pre-parsing. Reduced 15-25% of overall cache
        build time.
      - SystemState:
        - Speeded up 'Provides' pre-parsing. Reduced 5-10% of overall cache
          build time.
      - Package:
        'new': reduced 10-15% of time spent.
      - BinaryVersion:
        - 'new': fixed reading installed size in bytes.
        - 'new': use internal offsets for working with fields, reduces time
          spent by 20-30%.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Tue, 22 Sep 2009 19:12:54 +0300

cupt (1.0.0~beta1) unstable; urgency=low

  * cupt:
    - Fixed the regression since 0.6.0 when reasons are selected to display
      and some reason is an unsatisfied pre-dependency. Thanks to
      Michael Stapelberg.
  * Cupt
    - Cache:
      - Require List::MoreUtils >= 0.23 directly in code too. Thanks to
        Michael Stapelberg for the suggestion.
    - System:
      - Worker:
        - Sort downloads alphabetically.
        - 'update_release_and_index_data': flip the return result to match the
          documentation.
        - 'update_release_and_index_data': honor
          'apt::update::post-invoke-success' option.
        - 'update_release_and_index_data': don't try to check signatures in
          simulate mode.
      - Worker: