@@ -21,6 +21,8 @@ cupt (1.0.0~beta2) UNRELEASED; urgency=low
       - Three above accidentally (Closes: #547951).
       - Report unknown option names in original case. Thanks to Robert Millan.
         (Closes: #548314)
+      - ISCConfigParser:
+        - Parse \" as " in values. Thanks to Julian Andres Klode.
     - Cache:
       - Strip last '/' character from base URI if present. Thanks to Patrick
         Schoenfeld. (Closes: #547953)
